# real-time-stt-with-tts

./: .eslintrc.js  .gitignore  DOCS.md  Dockerfile  Makefile  README.md  ROADMAP.md  debug-log.md  docker-compose.yml  eslint.config.js  package.json  playwright.config.ts  start.sh  test-voice.html  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit
agents/: README.md  main.py  pyproject.toml  real_time_conversation.py
agents/src/realtime_stt/: __init__.py  cli.py  main.py
agents/src/realtime_stt/adapters/: __init__.py
agents/src/realtime_stt/adapters/primary/: __init__.py  cli_interface.py  health_controller.py  langraph_workflow.py  rest_controller.py  session_controller.py  websocket_controller.py
agents/src/realtime_stt/adapters/secondary/: __init__.py
agents/src/realtime_stt/application/: __init__.py
agents/src/realtime_stt/application/dtos/: speech_dtos.py
agents/src/realtime_stt/application/use_cases/: speech_use_cases.py
agents/src/realtime_stt/domain/: __init__.py
agents/src/realtime_stt/domain/entities/: audio.py
agents/src/realtime_stt/domain/repositories/: __init__.py  audio_repository.py  speech_repository.py
agents/src/realtime_stt/domain/services/: ai_reasoning_service.py  local_llm_service.py  rag_service.py  reasoning_validator.py  speech_service.py
agents/src/realtime_stt/infrastructure/: __init__.py
agents/src/realtime_stt/infrastructure/audio/: __init__.py  audio_device_manager.py  config_manager.py  keyboard_handler.py  optimized_buffer_manager.py  realtime_capture.py  test_buffer_optimization.py
agents/src/realtime_stt/infrastructure/models/: __init__.py  in_memory_audio_repository.py
agents/src/realtime_stt/infrastructure/observability/: __init__.py  logger.py  performance_monitor.py  test_performance_monitor.py
agents/src/realtime_stt/infrastructure/speech/: __init__.py  realtime_stt_repository.py
agents/src/realtime_stt/infrastructure/tts/: text_to_speech_service.py
agents/src/realtime_stt/infrastructure/vad/: __init__.py
cli/: go.mod  go.sum
cli/cmd/: main.go
cli/internal/cli/: devices.go  root.go  start.go
cli/internal/client/: python_client.go  websocket_client.go
cli/internal/ui/: manager.go
scripts/: cli_validation_report.md  phase2_latency_optimization_plan.md  prd.txt
test/: setup.ts
tests/e2e/: health.spec.ts  llm.spec.ts  voice-assistant.spec.ts
voice-assistant-electron/: README.md  package.json  tsconfig.json  vite.config.ts
voice-assistant-electron/electron/main/: audio.ts  index.ts  memory.ts  menu-bar.ts  notifications.ts  preload.ts  server-bridge.ts  tsconfig.json
voice-assistant-electron/electron/renderer/: index.html
voice-assistant-electron/electron/renderer/src/: App.tsx
voice-assistant-electron/scripts/: generate-icons.js  linux-integration.sh  notarize.js  sign.js  windows-integration.ps1
web-app/: package.json  server.js
web-app/public/: index.html
web-standalone/: server.py
web-standalone/public/: index.html
